namespace MissionTelemetry.Api.Repositories
{
    public class AlarmReadModelAdapter
    {
    }
}
