namespace MissionTelemetry.Api.Repositories
{
    public class IAlarmReadModel
    {
    }
}
