namespace MissionTelemetry.Api.Repositories
{
    public class IProximityRepository
    {
    }
}
