namespace MissionTelemetry.Api.Repositories
{
    public class ITelemetryRepository
    {
    }
}
