namespace MissionTelemetry.Api.Repositories
{
    public class InMemoryProximityRepository
    {
    }
}
