namespace MissionTelemetry.Api.Repositories
{
    public class InMemoryTelemetryRepository
    {
    }
}
